# splitbvh

./: .clang-format  .gitignore  CMakeLists.txt  assign_source_group.cmake  build.bat  gen.bat  update.bat
src/: main.cpp
src/bvh/: BVH.cpp  BVH.h  SAHBVH.cpp  SAHBVH.h  SplitBVH.cpp  SplitBVH.h
src/bvh_ref/: nvsbvh.cpp  nvsbvh.h  rrbvh.cpp  rrbvh.h  rrbvh_temp.h  rrbvh_temp2.h  rrbvh_temp3.h  rrbvh_temp4.h  rrbvh_temp5.h
src/bvh_ref/nvsbvh/: Array.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  CudaBVH.cpp  CudaBVH.h  CudaRenderKernel.h  Geometry.h  Scene.h  Sort.cpp  Sort.h  SplitBVHBuilder.cpp  SplitBVHBuilder.h  Util.cpp  Util.h  linear_math.h
src/bvh_ref/rrbvh/: Mat4.h  MathUtils.h  Vec2.h  Vec3.h  Vec4.h  rr_bbox.cpp  rr_bbox.h  rr_bvh.cpp  rr_bvh.h  rr_bvh_translator.cpp  rr_bvh_translator.h  rr_mesh.cpp  rr_mesh.h  rr_scene.cpp  rr_scene.h  rr_split_bvh.cpp  rr_split_bvh.h
src/common/: LinearMath.cpp  LinearMath.h  Logger.cpp  Logger.h  Ray.cpp  Ray.h
src/geometry/: AABB.cpp  AABB.h  BoundedTriangle.cpp  BoundedTriangle.h  Geometry.h  Intersection.cpp  Intersection.h  Mesh.cpp  Mesh.h  MeshGroup.cpp  MeshGroup.h  Triangle.cpp  Triangle.h
src/loader/: objLoader.cpp  objLoader.h  tiny_obj_loader.h  util.cpp  util.h
